Kubernetes/Deployment/systemd/ingress/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kubernetes-dashboard-ingress
spec:
 rules:
   - host: devops-k8s.mo.sap.corp 
     http:
       paths:
         - path: /
           backend:
             serviceName: kubernetes-dashboard
             servicePort: 80
